# track

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vite.config.ts  wrangler.jsonc
.github/workflows/: bump-cask.yml
database/: schema.prisma
database/migrations/: 0004_external_event_link.sql  0006_personal_access_tokens.sql  0008_drop_user_id.sql  0009_weekly_report_template.sql
integrations/claude/: track.md
migrations/: 0001_init.sql  0002_tags.sql  0002_user_settings_and_optional_project.sql  0003_entry_title.sql  0003_tags_on_project.sql  0004_work_hours_to_minutes.sql  0005_break_minutes.sql  0007_drop_account_tables.sql  0008_drop_user_id.sql
packaging/homebrew/: track.rb.template
prisma/: schema.prisma
samples/apple-intelligence/: Info.plist  (+1 more)
scripts/: build-sidecar.ts  check-version.mjs  db-pull.mjs  dev-desktop.mjs  package-release.sh  release.sh  run-apple-intelligence-sample.sh  set-version.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/apple-intelligence/: Info.plist  TrackAIHelper.swift
src-tauri/capabilities/: loopback-app.json  loopback-dialog.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: generate_weekly_report.toml  show_ai_integration_installer.toml
src-tauri/scripts/: build-ai-helper.ts  build-cli.ts  build-sidecar.ts
src-tauri/src/: lib.rs  main.rs
worker/: auth.ts  backup.ts  db.ts  dbHandle.ts  index.ts  local.ts  mcp.ts  migrate.ts  passkey.ts  types.ts
(+119 files in other folders)
